// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiVerticalBarSeries all props are rendered 1`] = `
<div
  style="width:100%;height:100%"
>
  <div
    class="euiSeriesChartContainer"
  >
    <div
      class="rv-xy-plot "
      style="width:600px;height:200px"
    >
      <svg
        class="rv-xy-plot__inner"
        height="200"
        style="width:100%;height:100%"
        width="600"
      >
        <g
          class="rv-xy-plot__series rv-xy-plot__series--bar euiBarSeries"
          transform="translate(40,10)"
        >
          <rect
            height="50"
            style="opacity:1;stroke:#DB1374;fill:#DB1374"
            width="233.75"
            x="20.625"
            y="100"
          />
          <rect
            height="150"
            style="opacity:1;stroke:#DB1374;fill:#DB1374"
            width="233.75"
            x="295.625"
            y="0"
          />
        </g>
        <g
          class="rv-xy-plot__grid-lines"
          transform="translate(40,10)"
        >
          <line
            class="rv-xy-plot__grid-lines__line"
            x1="0"
            x2="550"
            y1="150"
            y2="150"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            x1="0"
            x2="550"
            y1="130"
            y2="130"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            x1="0"
            x2="550"
            y1="110"
            y2="110"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            x1="0"
            x2="550"
            y1="90"
            y2="90"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            x1="0"
            x2="550"
            y1="70"
            y2="70"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            x1="0"
            x2="550"
            y1="50"
            y2="50"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            x1="0"
            x2="550"
            y1="30"
            y2="30"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            x1="0"
            x2="550"
            y1="10"
            y2="10"
          />
        </g>
        <g
          class="rv-xy-plot__axis rv-xy-plot__axis--horizontal "
          transform="translate(40,160)"
        >
          <line
            class="rv-xy-plot__axis__line"
            x1="0"
            x2="550"
            y1="0"
            y2="0"
          />
          <g
            class="rv-xy-plot__axis__ticks"
            transform="translate(0, 0)"
          >
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(27.499999999999993, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                -0.4
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(82.5, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                -0.2
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(137.5, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.0
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(192.5, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.2
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(247.5, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.4
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(302.5, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.6
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(357.5, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.8
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(412.5, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                1.0
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(467.5, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                1.2
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(522.5, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                1.4
              </text>
            </g>
          </g>
        </g>
        <g
          class="rv-xy-plot__axis rv-xy-plot__axis--vertical "
          transform="translate(0,10)"
        >
          <line
            class="rv-xy-plot__axis__line"
            x1="40"
            x2="40"
            y1="0"
            y2="150"
          />
          <g
            class="rv-xy-plot__axis__ticks"
            transform="translate(40, 0)"
          >
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 150)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                0
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 130)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                2
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 110)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                4
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 90)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                6
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 70)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                8
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 50)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                10
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 30)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                12
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 10)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                14
              </text>
            </g>
          </g>
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`EuiVerticalBarSeries is rendered 1`] = `
<div
  style="width: 100%; height: 100%;"
>
  <div
    aria-label="aria-label"
    class="testClass1 testClass2 euiSeriesChartContainer"
    data-test-subj="test subject string"
  >
    <div
      class="rv-xy-plot "
      style="width: 600px; height: 200px;"
    >
      <svg
        class="rv-xy-plot__inner"
        height="200"
        style="width: 100%; height: 100%;"
        width="600"
      >
        <g
          class="rv-xy-plot__series rv-xy-plot__series--bar euiBarSeries"
          transform="translate(40,10)"
        >
          <rect
            height="50"
            style="opacity: 1; stroke: #00B3A4; fill: #00B3A4;"
            width="233.75"
            x="20.625"
            y="100"
          />
          <rect
            height="150"
            style="opacity: 1; stroke: #00B3A4; fill: #00B3A4;"
            width="233.75"
            x="295.625"
            y="0"
          />
        </g>
        <g
          class="rv-xy-plot__grid-lines"
          transform="translate(40,10)"
        >
          <line
            class="rv-xy-plot__grid-lines__line"
            x1="0"
            x2="550"
            y1="150"
            y2="150"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            x1="0"
            x2="550"
            y1="130"
            y2="130"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            x1="0"
            x2="550"
            y1="110"
            y2="110"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            x1="0"
            x2="550"
            y1="90"
            y2="90"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            x1="0"
            x2="550"
            y1="70"
            y2="70"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            x1="0"
            x2="550"
            y1="50"
            y2="50"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            x1="0"
            x2="550"
            y1="30"
            y2="30"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            x1="0"
            x2="550"
            y1="10"
            y2="10"
          />
        </g>
        <g
          class="rv-xy-plot__axis rv-xy-plot__axis--horizontal "
          transform="translate(40,160)"
        >
          <line
            class="rv-xy-plot__axis__line"
            x1="0"
            x2="550"
            y1="0"
            y2="0"
          />
          <g
            class="rv-xy-plot__axis__ticks"
            transform="translate(0, 0)"
          >
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(27.499999999999993, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                -0.4
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(82.5, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                -0.2
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(137.5, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.0
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(192.5, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.2
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(247.5, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.4
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(302.5, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.6
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(357.5, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.8
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(412.5, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                1.0
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(467.5, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                1.2
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(522.5, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                1.4
              </text>
            </g>
          </g>
        </g>
        <g
          class="rv-xy-plot__axis rv-xy-plot__axis--vertical "
          transform="translate(0,10)"
        >
          <line
            class="rv-xy-plot__axis__line"
            x1="40"
            x2="40"
            y1="0"
            y2="150"
          />
          <g
            class="rv-xy-plot__axis__ticks"
            transform="translate(40, 0)"
          >
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 150)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                0
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 130)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                2
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 110)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                4
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 90)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                6
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 70)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                8
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 50)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                10
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 30)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                12
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 10)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                14
              </text>
            </g>
          </g>
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`EuiVerticalBarSeries renders stacked bar chart 1`] = `
<div
  style="width:100%;height:100%"
>
  <div
    class="euiSeriesChartContainer"
  >
    <div
      class="rv-xy-plot "
      style="width:600px;height:200px"
    >
      <svg
        class="rv-xy-plot__inner"
        height="200"
        style="width:100%;height:100%"
        width="600"
      >
        <g
          class="rv-xy-plot__series rv-xy-plot__series--bar euiBarSeries"
          transform="translate(40,10)"
        >
          <rect
            height="75"
            style="opacity:1;stroke:#DB1374;fill:#DB1374"
            width="233.75"
            x="20.625"
            y="75"
          />
          <rect
            height="45"
            style="opacity:1;stroke:#DB1374;fill:#DB1374"
            width="233.75"
            x="295.625"
            y="105"
          />
        </g>
        <g
          class="rv-xy-plot__series rv-xy-plot__series--bar euiBarSeries"
          transform="translate(40,10)"
        >
          <rect
            height="30"
            style="opacity:1;stroke:#3185FC;fill:#3185FC"
            width="233.75"
            x="20.625"
            y="45"
          />
          <rect
            height="105"
            style="opacity:1;stroke:#3185FC;fill:#3185FC"
            width="233.75"
            x="295.625"
            y="0"
          />
        </g>
        <g
          class="rv-xy-plot__grid-lines"
          transform="translate(40,10)"
        >
          <line
            class="rv-xy-plot__grid-lines__line"
            x1="0"
            x2="550"
            y1="150"
            y2="150"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            x1="0"
            x2="550"
            y1="120"
            y2="120"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            x1="0"
            x2="550"
            y1="90"
            y2="90"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            x1="0"
            x2="550"
            y1="60"
            y2="60"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            x1="0"
            x2="550"
            y1="30"
            y2="30"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            x1="0"
            x2="550"
            y1="0"
            y2="0"
          />
        </g>
        <g
          class="rv-xy-plot__axis rv-xy-plot__axis--horizontal "
          transform="translate(40,160)"
        >
          <line
            class="rv-xy-plot__axis__line"
            x1="0"
            x2="550"
            y1="0"
            y2="0"
          />
          <g
            class="rv-xy-plot__axis__ticks"
            transform="translate(0, 0)"
          >
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(137.5, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(412.5, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                1
              </text>
            </g>
          </g>
        </g>
        <g
          class="rv-xy-plot__axis rv-xy-plot__axis--vertical "
          transform="translate(0,10)"
        >
          <line
            class="rv-xy-plot__axis__line"
            x1="40"
            x2="40"
            y1="0"
            y2="150"
          />
          <g
            class="rv-xy-plot__axis__ticks"
            transform="translate(40, 0)"
          >
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 150)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                0
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 120)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                2
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 90)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                4
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 60)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                6
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 30)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                8
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                10
              </text>
            </g>
          </g>
        </g>
      </svg>
    </div>
  </div>
</div>
`;
